fixed h1 text-align bug that popped up. also reduced font-size to 33px on mobile tall

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -78,7 +78,7 @@ h1 {
         margin-bottom:  40px;
     }
     @include max_tablet {
-        font-size: 35px;
+        font-size: 33px;
         margin-bottom:  40px;
     }
 }
